--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "gulp-uglify": "^3.0.1",
     "handlebars": "^4.0.11",
-    "pump": "^3.0.0"
-  },
-  "devDependencies": {
+    "pump": "^3.0.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^6.26.3",
